--- a/index.html
+++ b/index.html
@@ -1,113 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Frise Santé Publique - Polynésie</title>
-  <style>
-    body { margin: 0; font-family: sans-serif; }
-    .timeline-container { display: flex; height: 100vh; }
-    aside, main { overflow-y: auto; padding: 1rem; }
-    .year-column { width: 20%; border-right: 1px solid #ccc; background: #f8f8f8; }
-    .event-list { width: 40%; }
-    .event-details { width: 40%; border-left: 1px solid #ccc; background: #fafafa; }
-    .year-btn { display: block; width: 100%; padding: 0.5rem; background: none; border: none; text-align: left; cursor: pointer; }
-    .year-btn:hover, .year-btn.active { background-color: #dceffd; }
-    .event { padding: 0.5rem; border: 1px solid #ddd; margin-bottom: 0.5rem; border-radius: 5px; cursor: pointer; }
-    .event:hover { background-color: #eef; }
-    .contextual { color: #999; border-color: #eee; background-color: #f9f9f9; }
-    .filters { padding: 0.5rem; background: #f0f0f0; }
-    .filters select, .filters input { margin-right: 0.5rem; }
-    .keyword { color: teal; cursor: pointer; text-decoration: underline; }
-  </style>
-</head>
-<body>
-  <div class="timeline-container">
-    <aside class="year-column" id="year-column"></aside>
-    <main class="event-list">
-      <div class="filters">
-        <select id="category-filter">
-          <option value="">Toutes catégories</option>
-          <option value="Santé publique">Santé publique</option>
-        </select>
-        <input type="text" id="search-keyword" placeholder="Mot-clé..." />
-      </div>
-      <div id="event-list"></div>
-    </main>
-    <aside class="event-details" id="event-details">Cliquez sur un événement pour voir sa fiche complète.</aside>
-  </div>
-  <script>
-    let eventsData = [];
-    fetch('events.json')
-      .then(res => res.json())
-      .then(data => {
-        eventsData = data;
-        const years = [...new Set(eventsData.flatMap(e => {
-          const range = [];
-          for (let y = e.start_year; y <= e.end_year; y++) range.push(y);
-          return range;
-        }))].sort((a, b) => a - b);
-
-        const yearCol = document.getElementById('year-column');
-        const eventList = document.getElementById('event-list');
-        const detailPanel = document.getElementById('event-details');
-        let currentYear = null;
-
-        years.forEach(year => {
-          const btn = document.createElement('button');
-          btn.textContent = year;
-          btn.className = 'year-btn';
-          btn.onclick = () => {
-            document.querySelectorAll('.year-btn').forEach(b => b.classList.remove('active'));
-            btn.classList.add('active');
-            currentYear = year;
-            loadEvents(year);
-          };
-          yearCol.appendChild(btn);
-        });
-
-        function loadEvents(year) {
-          const cat = document.getElementById('category-filter').value;
-          const keyword = document.getElementById('search-keyword').value.toLowerCase();
-          const contextYears = [year - 2, year - 1, year + 1, year + 2];
-          eventList.innerHTML = '';
-
-          eventsData.forEach(e => {
-            const isPrimary = year >= e.start_year && year <= e.end_year;
-            const isContext = contextYears.some(y => y >= e.start_year && y <= e.end_year);
-            if ((isPrimary || isContext) &&
-                (cat === '' || e.main_category === cat) &&
-                (keyword === '' || e.keywords.some(k => k.toLowerCase().includes(keyword)))) {
-
-              const div = document.createElement('div');
-              div.className = 'event' + (isContext ? ' contextual' : '');
-              div.innerHTML = `<strong>${e.title}</strong><br><small>${e.start_year}${e.end_year !== e.start_year ? '–' + e.end_year : ''}</small>`;
-              div.onclick = () => showDetails(e);
-              eventList.appendChild(div);
-            }
-          });
-          detailPanel.innerHTML = "Cliquez sur un événement pour voir sa fiche complète.";
-        }
-
-        function showDetails(event) {
-          detailPanel.innerHTML = `
-            <h2>${event.title}</h2>
-            <p><strong>Période :</strong> ${event.start_year} – ${event.end_year}</p>
-            <p><strong>Catégories :</strong> ${event.main_category} / ${event.secondary_category}</p>
-            <p><strong>Thèmes :</strong> ${event.themes.join(', ')}</p>
-            <p><strong>Mots-clés :</strong> ${event.keywords.map(k => `<span class="keyword" onclick="filterByKeyword('${k}')">${k}</span>`).join(', ')}</p>
-            <p>${event.description}</p>
-            <p><a href="${event.source}" target="_blank">Source</a></p>
-            <p><em>${event.contribution}</em></p>
-          `;
-        }
-
-        window.filterByKeyword = function(kw) {
-          document.getElementById('search-keyword').value = kw;
-          if (currentYear) loadEvents(currentYear);
-        };
-      });
-  </script>
-</body>
-</html>
+<!-- HTML V2 final à insérer ici (géré dans l'étape suivante) -->
