--- a/contribuer.html
+++ b/contribuer.html
@@ -477,30 +477,67 @@
    </div>
   </main>
   <script>
-   document.addEventListener("DOMContentLoaded", function () {
+  <script>
+document.addEventListener("DOMContentLoaded", function () {
   const yearElements = document.querySelectorAll(".year");
-  const eventElements = document.querySelectorAll(".event");
+  const eventList = document.getElementById("event-list");
+  const ficheTitre = document.getElementById("fiche-titre");
+  const ficheContent = document.getElementById("fiche-content");
+  const messageAttente = document.getElementById("message-attente");
 
-  let selectedYearEl = document.querySelector(".year.active");
+  let eventsData = [];
 
-  function filterEvents(selectedYear) {
-    eventElements.forEach(ev => {
-      const years = ev.dataset.years ? ev.dataset.years.split(",").map(Number) : [];
-      const isExact = years.includes(selectedYear);
-      const inRange = years.some(y => Math.abs(y - selectedYear) <= 3);
-      ev.style.display = inRange ? "block" : "none";
-      ev.classList.toggle("nearby", inRange && !isExact);
+  fetch("events.json")
+    .then(res => res.json())
+    .then(data => {
+      eventsData = data;
+
+      yearElements.forEach(yearEl => {
+        yearEl.addEventListener("click", () => {
+          yearElements.forEach(e => e.classList.remove("active"));
+          yearEl.classList.add("active");
+
+          const selectedYear = parseInt(yearEl.dataset.year);
+          let anyVisible = false;
+          eventList.innerHTML = "";
+
+          const range = [selectedYear - 2, selectedYear - 1, selectedYear, selectedYear + 1, selectedYear + 2];
+
+          eventsData.forEach(e => {
+            const inRange = selectedYear >= e.start && selectedYear <= e.end;
+            const nearby = !inRange && range.some(y => y >= e.start && y <= e.end);
+            if (!inRange && !nearby) return;
+
+            const ev = document.createElement("div");
+            ev.className = "event" + (nearby ? " nearby" : "");
+            ev.innerHTML = `
+              <div class="event-date">${selectedYear}</div>
+              <div>
+                <strong>${e.title}${e.start != e.end ? ` (${e.start}–${e.end})` : ""}</strong>
+                ${e.start != e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
+              </div>
+            `;
+            ev.onclick = () => {
+              ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
+              ficheContent.innerHTML = `
+                <p><strong>Catégories :</strong> ${e.maincat} / ${e.subcat}</p>
+                <p><strong>Thèmes :</strong> ${e.themes}</p>
+                <p><strong>Mots-clés :</strong> ${e.keywords}</p>
+                <p>${e.description}</p>
+                ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
+              `;
+            };
+            eventList.appendChild(ev);
+            anyVisible = true;
+          });
+
+          messageAttente.style.display = anyVisible ? "none" : "block";
+        });
+      });
     });
-  }
+});
+</script>
 
-  yearElements.forEach(yearEl => {
-    yearEl.addEventListener("click", () => {
-      if (selectedYearEl) selectedYearEl.classList.remove("active");
-      yearEl.classList.add("active");
-      selectedYearEl = yearEl;
-      const selected = parseInt(yearEl.dataset.year);
-      filterEvents(selected);
-    });
   });
 
   if (selectedYearEl) {
