--- a/contribuer.html
+++ b/contribuer.html
@@ -235,7 +235,7 @@
                 ev.innerHTML = `
                   <div class="event-date">${inRange ? selectedYear : `<span style="opacity:0.6">${e.start}</span>`}</div>
                   <div>
-                    <strong>${e.title}${e.start != e.end ? ` (${e.start}–${e.end})` : ""}</strong>
+                    <strong>${e.title}${e.start != e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
                     ${e.start != e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
                   </div>
                 `;
