--- a/contribuer.html
+++ b/contribuer.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Contribuer - Paana</title>
-  <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
-  <link rel="stylesheet" href="header-footer.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
+  <link href="header-footer.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
   <style>
     body {
       margin: 0;
@@ -138,21 +139,9 @@
       margin-left: 6px;
       border-radius: 4px;
     }
-    @media (max-width: 768px) {
-      .timeline-layout {
-        flex-direction: column;
-      }
-      .years-column, .fiche-column {
-        width: 100%;
-        flex-direction: row;
-        overflow-x: auto;
-        border-right: none;
-        border-bottom: 1px solid #ddd;
-      }
-    }
   </style>
-</head>
-<body>
+ </head>
+ <body>
   <header>
     <div class="logo">
       <span class="brand">Paana</span>
@@ -191,13 +180,15 @@
       const ficheContent = document.getElementById("fiche-content");
       const messageAttente = document.getElementById("message-attente");
 
+      let eventsData = [];
+
       fetch("events.json")
         .then(res => res.json())
         .then(data => {
-          const eventsData = data;
+          eventsData = data;
 
           const allYears = [...new Set(eventsData.flatMap(e =>
-            Array.from({ length: e.end - e.start + 1 }, (_, i) => Number(e.start) + i)
+            Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
           ))].sort((a, b) => a - b);
 
           allYears.forEach(y => {
@@ -205,8 +196,6 @@
             yEl.className = "year";
             yEl.dataset.year = y;
             yEl.textContent = y;
-            yEl.setAttribute("role", "button");
-            yEl.setAttribute("tabindex", "0");
             yearCol.appendChild(yEl);
           });
 
@@ -221,19 +210,17 @@
               let anyVisible = false;
               eventList.innerHTML = "";
 
-              const range = [selectedYear - 2, selectedYear - 1, selectedYear, selectedYear + 1, selectedYear + 2];
-              const sortedEvents = eventsData
-              .filter(e => selectedYear >= e.start - 2 && selectedYear <= e.end + 2)
-              .sort((a, b) => a.start - b.start);
-              sortedEvents.forEach(e => {
+              eventsData.forEach(e => {
                 const inRange = selectedYear >= e.start && selectedYear <= e.end;
-                const nearby = !inRange && range.some(y => y >= e.start && y <= e.end);
+                const nearby = !inRange && (
+                  selectedYear >= e.start - 2 && selectedYear <= e.end + 2
+                );
                 if (!inRange && !nearby) return;
 
                 const ev = document.createElement("div");
                 ev.className = "event" + (nearby ? " nearby" : "");
                 ev.innerHTML = `
-                  <div class="event-date">${inRange ? selectedYear : `<span style="opacity:0.6">${e.start}</span>`}</div>
+                  ${inRange ? '' : `<div class="event-date">${e.start}</div>`}
                   <div>
                     <strong>${e.title}${e.start != e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
                     ${e.start != e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
@@ -256,13 +243,8 @@
               messageAttente.style.display = anyVisible ? "none" : "block";
             });
           });
-
-          // Auto-clique sur la première année
-          setTimeout(() => {
-            document.querySelector(".year")?.click();
-          }, 100);
         });
     });
   </script>
-</body>
+ </body>
 </html>
