--- a/contribuer.html
+++ b/contribuer.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française"/>
-  <link rel="stylesheet" href="header-footer.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link href="header-footer.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
   <style>
     body {
       margin: 0;
@@ -21,7 +21,18 @@
       flex-grow: 1;
       max-width: 1200px;
       margin: 0 auto;
-      padding: 1.5rem 2rem 2rem;
+      padding: 1.5rem 2rem 2rem 2rem;
+    }
+    h1, h2, h4 {
+      color: #007b7f;
+      font-weight: bold;
+    }
+    h1 { font-size: 1.8rem; margin-bottom: 2rem; }
+    h2, h4 { margin-top: 2rem; }
+    p, main ul li {
+      font-size: 1rem;
+      line-height: 1.7;
+      color: #050505;
     }
     .timeline-layout {
       display: flex;
@@ -50,8 +61,8 @@
     }
     .year {
       padding: 0.75rem 1rem;
-      cursor: pointer;
       position: relative;
+      cursor: pointer;
     }
     .year::before {
       content: "";
@@ -80,6 +91,10 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
+    .events-column h4 {
+      margin-top: 2rem;
+      font-size: 1.1rem;
+    }
     .event {
       background: white;
       border-radius: 6px;
@@ -105,9 +120,7 @@
       border-left: 1px solid #ddd;
       overflow-y: auto;
     }
-    .fiche-column h3 {
-      margin-top: 0;
-    }
+    .fiche-column h3 { margin-top: 0; }
     .fiche-column img {
       width: 100%;
       height: auto;
@@ -124,8 +137,8 @@
       border-radius: 4px;
     }
   </style>
- </head>
- <body>
+</head>
+<body>
   <header>
     <div class="logo">
       <span class="brand">Paana</span>
@@ -156,97 +169,95 @@
       </div>
     </div>
   </main>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const yearCol = document.querySelector(".years-column");
-  const eventList = document.getElementById("event-list");
-  const ficheTitre = document.getElementById("fiche-titre");
-  const ficheContent = document.getElementById("fiche-content");
-  const messageAttente = document.getElementById("message-attente");
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const yearCol = document.querySelector(".years-column");
+      const eventList = document.getElementById("event-list");
+      const ficheTitre = document.getElementById("fiche-titre");
+      const ficheContent = document.getElementById("fiche-content");
+      const messageAttente = document.getElementById("message-attente");
 
-  let eventsData = [];
+      fetch("events.json")
+        .then(res => res.json())
+        .then(data => {
+          const eventsData = data;
 
-  fetch("events.json")
-    .then(res => res.json())
-    .then(data => {
-      eventsData = data;
+          const allYears = [...new Set(eventsData.flatMap(e =>
+            Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
+          ))].sort((a, b) => a - b);
 
-      const allYears = [...new Set(eventsData.flatMap(e =>
-        Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
-      ))].sort((a, b) => a - b);
+          allYears.forEach(y => {
+            const yEl = document.createElement("div");
+            yEl.className = "year";
+            yEl.dataset.year = y;
+            yEl.textContent = y;
+            yearCol.appendChild(yEl);
+          });
 
-      allYears.forEach(y => {
-        const yEl = document.createElement("div");
-        yEl.className = "year";
-        yEl.dataset.year = y;
-        yEl.textContent = y;
-        yearCol.appendChild(yEl);
-      });
+          const yearElements = document.querySelectorAll(".year");
 
-      const yearElements = document.querySelectorAll(".year");
+          yearElements.forEach(yearEl => {
+            yearEl.addEventListener("click", () => {
+              yearElements.forEach(e => e.classList.remove("active"));
+              yearEl.classList.add("active");
 
-      yearElements.forEach(yearEl => {
-        yearEl.addEventListener("click", () => {
-          yearElements.forEach(e => e.classList.remove("active"));
-          yearEl.classList.add("active");
+              const Y = parseInt(yearEl.dataset.year);
+              eventList.innerHTML = "";
 
-          const selectedYear = parseInt(yearEl.dataset.year);
-          eventList.innerHTML = "";
+              const prev = [], current = [], next = [];
 
-          const sortedEvents = [...eventsData].sort((a, b) => a.start - b.start);
+              eventsData.forEach(e => {
+                if (e.start <= Y && e.end >= Y) {
+                  current.push(e);
+                } else if (e.end >= Y - 2 && e.end < Y) {
+                  prev.push(e);
+                } else if (e.start > Y && e.start <= Y + 2) {
+                  next.push(e);
+                }
+              });
 
-const prev = [], current = [], next = [];
+              const createBlock = (title, list, isNearby = false) => {
+                if (list.length === 0) return;
+                const section = document.createElement("div");
+                const h4 = document.createElement("h4");
+                h4.textContent = title;
+                section.appendChild(h4);
 
-eventsData.forEach(e => {
-  if (e.start === selectedYear) {
-    current.push(e);
-  } else if (e.end >= selectedYear - 2 && e.end < selectedYear) {
-    prev.push(e);
-  } else if (e.start > selectedYear && e.start <= selectedYear + 2) {
-    next.push(e);
-  }
-});
+                list.sort((a, b) => a.start - b.start).forEach(e => {
+                  const ev = document.createElement("div");
+                  ev.className = "event" + (isNearby ? " nearby" : "");
+                  ev.innerHTML = `
+                    <div class="event-date">${e.start}</div>
+                    <div>
+                      <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
+                      ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
+                    </div>
+                  `;
+                  ev.onclick = () => {
+                    ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
+                    ficheContent.innerHTML = `
+                      <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
+                      <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
+                      <p><strong>Mots-clés :</strong> ${e.keywords || ""}</p>
+                      <p>${e.description || ""}</p>
+                      ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
+                    `;
+                  };
+                  section.appendChild(ev);
+                });
 
-          const renderSection = (title, events, nearby = false) => {
-            if (events.length === 0) return;
-
-            const section = document.createElement("div");
-            section.innerHTML = `<h4 style="margin-bottom: 1rem;">${title}</h4>`;
-            eventList.appendChild(section);
-
-            events.forEach(e => {
-              const div = document.createElement("div");
-              div.className = "event" + (nearby ? " nearby" : "");
-              div.innerHTML = `
-                ${nearby ? `<div class="event-date">${e.start}</div>` : ""}
-                <div>
-                  <span>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</span>
-                  ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-                </div>
-              `;
-              div.onclick = () => {
-                ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
-                ficheContent.innerHTML = `
-                  <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
-                  <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
-                  <p><strong>Mots-clés :</strong> ${e.keywords || ""}</p>
-                  <p>${e.description || ""}</p>
-                  ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
-                `;
+                eventList.appendChild(section);
               };
-              section.appendChild(div);
+
+              createBlock(`Événements voisins précédents`, prev, true);
+              createBlock(`Événements de ${Y}`, current);
+              createBlock(`Événements voisins suivants`, next, true);
+
+              messageAttente.style.display = (prev.length || current.length || next.length) ? "none" : "block";
             });
-          };
-
-          renderSection("Événements voisins précédents", prev, true);
-          renderSection(`Événements de ${selectedYear}`, current, false);
-          renderSection("Événements voisins suivants", next, true);
-
-          messageAttente.style.display = (prev.length + current.length + next.length > 0) ? "none" : "block";
+          });
         });
-      });
     });
-});
-</script>
- </body>
+  </script>
+</body>
 </html>
