--- a/contribuer.html
+++ b/contribuer.html
@@ -21,7 +21,7 @@
       flex-grow: 1;
       max-width: 1200px;
       margin: 0 auto;
-      padding: 1.5rem 2rem 2rem 2rem;
+      padding: 1.5rem 2rem 2rem;
     }
     h1, h2, h4 {
       color: #007b7f;
@@ -32,7 +32,6 @@
     p, main ul li {
       font-size: 1rem;
       line-height: 1.7;
-      color: #050505;
     }
     .timeline-layout {
       display: flex;
@@ -44,11 +43,11 @@
     .years-column {
       width: 100px;
       padding-left: 2rem;
-      background: white;
+      background: #fff;
       border-right: 1px solid #ddd;
-      position: relative;
       overflow-y: auto;
       max-height: 600px;
+      position: relative;
     }
     .years-column::before {
       content: "";
@@ -61,8 +60,8 @@
     }
     .year {
       padding: 0.75rem 1rem;
-      position: relative;
       cursor: pointer;
+      position: relative;
     }
     .year::before {
       content: "";
@@ -91,12 +90,8 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
-    .events-column h4 {
-      margin-top: 2rem;
-      font-size: 1.1rem;
-    }
     .event {
-      background: white;
+      background: #fff;
       border-radius: 6px;
       margin-bottom: 1rem;
       padding: 1rem;
@@ -120,7 +115,9 @@
       border-left: 1px solid #ddd;
       overflow-y: auto;
     }
-    .fiche-column h3 { margin-top: 0; }
+    .fiche-column h3 {
+      margin-top: 0;
+    }
     .fiche-column img {
       width: 100%;
       height: auto;
@@ -129,8 +126,8 @@
     }
     .pluriannuel-badge {
       display: inline-block;
-      background-color: #007b7f;
-      color: white;
+      background: #007b7f;
+      color: #fff;
       font-size: 0.7rem;
       padding: 2px 6px;
       margin-left: 6px;
@@ -170,7 +167,7 @@
     </div>
   </main>
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", () => {
       const yearCol = document.querySelector(".years-column");
       const eventList = document.getElementById("event-list");
       const ficheTitre = document.getElementById("fiche-titre");
@@ -180,9 +177,7 @@
       fetch("events.json")
         .then(res => res.json())
         .then(data => {
-          const eventsData = data;
-
-          const allYears = [...new Set(eventsData.flatMap(e =>
+          const allYears = [...new Set(data.flatMap(e =>
             Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
           ))].sort((a, b) => a - b);
 
@@ -194,11 +189,9 @@
             yearCol.appendChild(yEl);
           });
 
-          const yearElements = document.querySelectorAll(".year");
-
-          yearElements.forEach(yearEl => {
+          document.querySelectorAll(".year").forEach(yearEl => {
             yearEl.addEventListener("click", () => {
-              yearElements.forEach(e => e.classList.remove("active"));
+              document.querySelectorAll(".year").forEach(e => e.classList.remove("active"));
               yearEl.classList.add("active");
 
               const Y = parseInt(yearEl.dataset.year);
@@ -206,18 +199,14 @@
 
               const prev = [], current = [], next = [];
 
-              eventsData.forEach(e => {
-                if (e.start <= Y && e.end >= Y) {
-                  current.push(e);
-                } else if (e.end >= Y - 2 && e.end < Y) {
-                  prev.push(e);
-                } else if (e.start > Y && e.start <= Y + 2) {
-                  next.push(e);
-                }
+              data.forEach(e => {
+                if (e.start <= Y && e.end >= Y) current.push(e);
+                else if (e.end >= Y - 2 && e.end < Y) prev.push(e);
+                else if (e.start > Y && e.start <= Y + 2) next.push(e);
               });
 
               const createBlock = (title, list, isNearby = false) => {
-                if (list.length === 0) return;
+                if (!list.length) return;
                 const section = document.createElement("div");
                 const h4 = document.createElement("h4");
                 h4.textContent = title;
@@ -249,9 +238,9 @@
                 eventList.appendChild(section);
               };
 
-              createBlock(`Événements voisins précédents`, prev, true);
+              createBlock("Événements voisins précédents", prev, true);
               createBlock(`Événements de ${Y}`, current);
-              createBlock(`Événements voisins suivants`, next, true);
+              createBlock("Événements voisins suivants", next, true);
 
               messageAttente.style.display = (prev.length || current.length || next.length) ? "none" : "block";
             });
